--- a/Angular-ThirdPartyLibrariesAndComponents/src/app/product-details/product-details.component.html
+++ b/Angular-ThirdPartyLibrariesAndComponents/src/app/product-details/product-details.component.html
@@ -1,15 +1,20 @@
-<div class="container py-2">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="d-flex" [id]="productDetails.id">
-        <div class="img-div">
-          <img [src]="productDetails.imgUrl" class="card-img-top" [title]="productDetails.title" alt="...">
-        </div>
-        <div class="card-body d-flex flex-column justify-content-between align-items-center">
-          <h5 class="card-title">{{productDetails.title}}</h5>
-          <p class="card-text">{{productDetails.description}}</p>
-          <a class="btn btn-warning">Id: {{productDetails.id}}</a>
-          <a routerLink="/products" class="btn btn-success">Geriyə</a>
+<div *ngIf="productDetails">
+  <h1>Id: {{productId}}</h1>
+  <h3>Query (Name): {{name}}</h3>
+
+  <div class="container py-2">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="d-flex" [id]="productDetails.id">
+          <div class="img-div">
+            <img [src]="productDetails.imgUrl" class="card-img-top" [title]="productDetails.title" alt="...">
+          </div>
+          <div class="card-body d-flex flex-column justify-content-between align-items-center">
+            <h5 class="card-title">{{productDetails.title}}</h5>
+            <p class="card-text">{{productDetails.description}}</p>
+            <a class="btn btn-warning">Id: {{productDetails.id}}</a>
+            <a routerLink="/products" class="btn btn-success">Geriyə</a>
+          </div>
         </div>
       </div>
     </div>
